# paradigms

./: .gitignore  .readthedocs.yaml  LICENSE.txt  README.md  README.rst  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: conf.py
src/paradigms/: __init__.py  core.py  stdlib.py
tests/: test_paradigms.py
