[project]
name = "paradigms"
version = "0.0.0.dev1"
description = "Different execution paradigms"
readme = "README.rst"
authors = [
    { name = "Chris Withers", email = "chris@withers.org" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
docs = [
    "furo>=2024.8.6",
    "sphinx>=8.1.3",
]
dev = [
    "black>=25.1.0",
    "pytest>=8.3.4",
    "testfixtures>=8.3.0",
]

[tool.black]
line-length = 100
skip-string-normalization = true

[tool.uv]
default-groups = ["docs"]
