[project]
name = "paradigms"
version = "0.0.0.dev2"
description = "Different execution paradigms"
readme = "README.rst"
authors = [
    { name = "Chris Withers", email = "chris@withers.org" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
docs = [
    "furo>=2024.8.6",
    "sphinx>=8.1.3",
]
dev = [
    "black>=25.1.0",
    "mypy>=1.14.1",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "testfixtures>=8.3.0",
]

[tool.black]
line-length = 100
skip-string-normalization = true

[tool.mypy]
strict= true
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true


[[tool.mypy.overrides]]
module = [
    "testfixtures",
]
ignore_missing_imports = true

[tool.uv]
default-groups = ["docs"]
