[project]
name = "paradigms"
version = "0.0.0.dev2"
description = "Different execution paradigms"
readme = "README.rst"
authors = [
    { name = "Chris Withers", email = "chris@withers.org" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
docs = [
    "furo>=2024.8.6",
    "sphinx>=8.1.3",
]
dev = [
    "mypy>=1.14.1",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "testfixtures>=8.3.0",
]

[tool.hatch.build.targets.sdist]
# paranoidly only include the package in the sdist: https://github.com/pypa/hatch/issues/304
packages = ["src/paradigms"]

[tool.mypy]
strict= true
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = [
    "testfixtures",
]
ignore_missing_imports = true

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "preserve"

[tool.uv]
default-groups = ["docs"]
